syntax = "proto3";

option java_package = "example.container.grpc";
option java_outer_classname = "ContainerProto";

message Cargo {
	string kind = 1;
	int32 size = 2;
}

message AddedCargo {
	bool ok = 1;
}

service ContainerService {

	rpc AddCargo (Cargo) returns (AddedCargo) {}
} 